--- a/encode.html
+++ b/encode.html
@@ -122,7 +122,10 @@ Do not remove this
 </div>
 </div><div class='widget HTML' data-version='1' id='HTML204'>
 <div class='copylive' id='copylive'>
-<h3 style="text-align: center;"><span style="color: white;">www.yosin-tv.net</span></h3></div>
+<!--
+<h3 style="text-align: center;"><span style="color: white;">www.yosin-tv.net</span></h3>
+-->
+</div>
 </div><div class='widget HTML' data-version='1' id='HTML205'>
 <script> var encode = true; </script>
 </div><div class='widget HTML' data-version='1' id='HTML206'>
