--- a/weakspell.html
+++ b/weakspell.html
@@ -95,10 +95,30 @@
     document.getElementById('player-iframe').src = originalURL;
 </script>
 
+<!--Ads Open-->
+<script type='text/javascript'>
+$(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').hide(90);});});
+</script>
+<div id='fixedban' style='width:100%;margin:auto;text-align:center;float:none;overflow:hidden;display:scroll;position:fixed;bottom:0;z-index:999;-webkit-transform:translateZ(0);'>
+<div>
+<a id='close-fixedban' onclick='document.getElementById("fixedban").style.display = "none";' style='cursor:pointer;'><img alt='close' src=' https://www.rakeshtechsolutions.com/assets/img/btn_close.gif ' style='vertical-align:middle;' title='close button'/></a>
+</div>
+<div style='text-align:center;display:block;max-width:300px;height:auto;overflow:hidden;margin:auto'>
 
-<!-- Ads Here-->
-<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('ofleafeona.com',7496520,document.createElement('script'))</script>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '0bf9fa0a59005b4b836444f060321d48',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//hailofficemeasure.com/0bf9fa0a59005b4b836444f060321d48/invoke.js"></script>
+	
+</div>
+</div>
+<!--Ads Close-->
         
 </body>
 </html>
