--- a/weakspell.html
+++ b/weakspell.html
@@ -89,7 +89,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = ` https://weakspell.to/soccer-streams/yosintv/${customID}/?embed=1`;
+    const originalURL = ` https://yosintv.github.io/yosintv/jwplayers.html?src=https://weakspell.to/soccer-streams/yosintv/${customID}/?embed=1`;
 
     // Set the iframe source to the modified URL
     document.getElementById('player-iframe').src = originalURL;
