--- a/foot.html
+++ b/foot.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=https://56.reducemyweight.net/player.html?src=id">
+<meta http-equiv="refresh" content="0; url=https://02.hls-player.net/player.html?src=id">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://56.reducemyweight.net/player.html?src=${customId}`;
-    window.location.replace(newUrl);
+    const newurl = `https://02.hls-player.net/player.html?src=${customId}`;
+    window.location.replace(newurl);
 </script>
 </body>
 </html>
