--- a/ovo.html
+++ b/ovo.html
@@ -80,7 +80,7 @@
 <body>
 
 <div id="player-container">
-    <iframe id="player-iframe" allowfullscreen></iframe>
+    <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" id="player-iframe" allowfullscreen></iframe>
             <!--<div id="text">www.yosin-tv.net</div> -->
 </div>
 
