--- a/letv.html
+++ b/letv.html
@@ -90,7 +90,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://yosintv2.github.io/bkp/plyrr.html?url=https://lebo.huminbird.cn/live/ballbar_${customID}.m3u8 
+    const originalURL = `https://yosintv2.github.io/bkp/plyrr.html?url=https://play1nm.hnyongshun.cn/live/ballbar_${customID}.m3u8 
 `;
 
     // Set the iframe source to the modified URL
