--- a/ovo.html
+++ b/ovo.html
@@ -91,7 +91,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://ovostreamz.com/events/stream${customID}`;
+    const originalURL = `https://streammaxcash.com/events/stream${customID}`;
 
 	
     // Set the iframe source to the modified URL
