--- a/live.html
+++ b/live.html
@@ -5,13 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iFrame Player</title>
 </head>
-<body>
+<body
     
     <!-- iFrame to display the content -->
     <iframe id="player" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
 
   
-  <style>
+    <script>
+        // Channel URIs
+        const channels = {
+            tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
+            tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
+            tnt3: "https://topembed.pw/channel/TNTSports3[UK]"
+            tnt4: "https://topembed.pw/channel/TNTSports4[UK]"
+        };
+
+        // Get the URL parameters
+        const urlParams = new URLSearchParams(window.location.search);
+        const channel = urlParams.get('id');
+
+        // Set iframe src based on URI parameter
+        function setChannel(channel) {
+            const iframe = document.getElementById('player');
+            if (channels[channel]) {
+                iframe.src = channels[channel];
+            } else {
+                iframe.src = channels.tntsports1; // Default channel
+            }
+        }
+
+        // Initialize player with the channel from URI
+        setChannel(channel);
+    </script>
+
+
+     <style>
         #container {
           margin: 0;
           padding: 0;
@@ -51,33 +79,7 @@
           z-index: 9999;
         }
       </style>
-    </div>
-  
-  
-    <script>
-        // Channel URIs
-        const channels = {
-            tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
-            tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
-            tnt3: "https://topembed.pw/channel/TNTSports3[UK]"
-        };
 
-        // Get the URL parameters
-        const urlParams = new URLSearchParams(window.location.search);
-        const channel = urlParams.get('id');
-
-        // Set iframe src based on URI parameter
-        function setChannel(channel) {
-            const iframe = document.getElementById('player');
-            if (channels[channel]) {
-                iframe.src = channels[channel];
-            } else {
-                iframe.src = channels.tntsports1; // Default channel
-            }
-        }
-
-        // Initialize player with the channel from URI
-        setChannel(channel);
-    </script>
+    
 </body>
 </html>
