--- a/live.html
+++ b/live.html
@@ -13,14 +13,23 @@
   
     <script>
         // Channel URIs
+        // ___: " ___ "
         const channels = {
             tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
             tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
-            tnt3: "https://topembed.pw/channel/TNTSports3[UK]"
-            tnt4: "https://topembed.pw/channel/TNTSports4[UK]"
-        };
+            tnt3: "https://topembed.pw/channel/TNTSports3[UK]",
+            tnt4: "https://topembed.pw/channel/TNTSports4[UK]",
+            willow: " https://topembed.pw/channel/WillovTV[USA] "
+            willowxtra: " https://topembed.pw/channel/WillowXtra[USA] ",
+            laligatv: " https://topembed.pw/channel/LaLigaTV[UK] ",
+            tycsports: " https://topembed.pw/channel/TYCSports[Argentina] ",
+            bbc1: " https://topembed.pw/channel/BBCOne[UK] ",
+            bbc2: " https://topembed.pw/channel/BBCTwo[UK] "
+        
+        
+        };   
 
-        // Get the URL parameters
+        // Get the URL parameters // ___: " ___ ",
         const urlParams = new URLSearchParams(window.location.search);
         const channel = urlParams.get('id');
 
