--- a/live.html
+++ b/live.html
@@ -8,7 +8,7 @@
 <body
     
     <!-- iFrame to display the content -->
-    <iframe id="player" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+    <iframe id="player" width="100%" height="500px" frameborder="0" loading="lazy" allowfullscreen></iframe>
 
   
     <script>
