--- a/live.html
+++ b/live.html
@@ -28,7 +28,7 @@
             skycricket: " https://topembed.pw/channel/SkySportsCricket[UK] ",
             skyme: " https://topembed.pw/channel/SkySportsMainEvent[UK] ",
             supergrand: " https://topembed.pw/channel/SuperSportGrandstand[SouthAfrica] ",
-            ___: " ___ ",
+            usanetwork: " https://topembed.pw/channel/USANetwork[USA] ",
             ___: " ___ ",
             ___: " ___ ",
             
