--- a/match.html
+++ b/match.html
@@ -70,6 +70,7 @@
  <li><a href="https://www.livesoccertv.com/competitions/italy/serie-a/" target="_blank">Serie A (Italy)</a></li>
  <li><a href="https://www.livesoccertv.com/competitions/germany/bundesliga/" target="_blank">Bundesliga (Germany)</a></li>
  <li><a href="https://www.livesoccertv.com/competitions/france/ligue-1/" target="_blank">Ligue 1 (France)</a></li>
+ <li><a href="https://www.livesoccertv.com/competitions/portugal/liga-sagres/" target="_blank">Liga (Portugal)</a></li>
  <li><a href="https://www.livesoccertv.com/teams/saudi-arabia/al-nasr/" target="_blank">Al Nassr</a></li>
  <li><a href="https://www.livesoccertv.com/teams/united-states/inter-miami/" target="_blank"> Inter Miami (France)</a></li>
 
