--- a/live.html
+++ b/live.html
@@ -29,7 +29,7 @@
             skyme: " https://topembed.pw/channel/SkySportsMainEvent[UK] ",
             supergrand: " https://topembed.pw/channel/SuperSportGrandstand[SouthAfrica] ",
             usanetwork: " https://topembed.pw/channel/USANetwork[USA] ",
-            ___: " ___ ",
+            nepsco1: " https://embedstreams.me/test-odi/nepal-vs-scotland-stream-1 ",
             ___: " ___ ",
             
         
