--- a/live.html
+++ b/live.html
@@ -36,7 +36,7 @@ soon: " https://yosintv2.github.io/tv/soon.html ",
 yt: " https://www.youtube.com/embed/___ ",            
 b1: " https://v5.sportsonline.si/channels/pt/sporttv2.php ",
 b2: " https://v5.sportsonline.si/channels/bra/br2.php ",
-___: " ___ ",
+sptv2: " https://topembed.pw/channel/SportTV2[Portugal] ",
 ___: " ___ ",
 
 		
