--- a/live.html
+++ b/live.html
@@ -37,7 +37,7 @@ yt: " https://www.youtube.com/embed/___ ",
 b1: " https://v5.sportsonline.si/channels/pt/sporttv2.php ",
 b2: " https://v5.sportsonline.si/channels/bra/br2.php ",
 sptv2: " https://topembed.pw/channel/SportTV2[Portugal] ",
-___: " ___ ",
+dazn2: " https://topembed.pw/channel/DAZN2Deutschland[Germany] ",
 
 		
         };   
