--- a/live.html
+++ b/live.html
@@ -38,6 +38,8 @@ b1: " https://v5.sportsonline.si/channels/pt/sporttv2.php ",
 b2: " https://v5.sportsonline.si/channels/bra/br2.php ",
 sptv2: " https://topembed.pw/channel/SportTV2[Portugal] ",
 dazn2: " https://topembed.pw/channel/DAZN2Deutschland[Germany] ",
+nepsco1: " https://embedme.top/embed/alpha/scotland-vs-nepal/1	 ",
+nepsco2: " https://embedme.top/embed/alpha/scotland-vs-nepal/2 ",
 
 		
         };   
