--- a/live.html
+++ b/live.html
@@ -40,7 +40,7 @@ sptv2: " https://topembed.pw/channel/SportTV2[Portugal] ",
 dazn2: " https://topembed.pw/channel/DAZN2Deutschland[Germany] ",
 nepsco1: " https://embedme.top/embed/alpha/scotland-vs-nepal/1	 ",
 nepsco2: " https://embedme.top/embed/alpha/scotland-vs-nepal/2 ",
-styx: " https://wicketgoal.github.io/myplayer/m3u8.html?url=https://ams2.styxsports.com:5443/styxsports/streams/8Q2eCPIeUkFxCfmV1643535951665288.m3u8",
+styx: " https://yosintv2.github.io/tv/m3u8.html?url=https://ams2.styxsports.com:5443/styxsports/streams/8Q2eCPIeUkFxCfmV1643535951665288.m3u8 ",
 
 		
         };   
