--- a/plyrryt.html
+++ b/plyrryt.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="plyr__video-embed" id="player">
-    <iframe allowfullscreen allow="autoplay"></iframe>
+    <iframe width="100%" height="500px"  allowfullscreen allow="autoplay"></iframe>
 </div>
 
 <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
