--- a/plyrryt.html
+++ b/plyrryt.html
@@ -5,11 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plyr.io YouTube Player with URL Parameter</title>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
+
+    <style>
+                     /*Font Library https://fonts.google.com/ */
+   @font-face{font-family:&#39;Neo Sans Arabic&#39;;font-style:normal;font-weight:normal;font-display:swap;src:local(&#39;Neo Sans Arabic&#39;),url(&#39;https://cdn.statically.io/gh/yallashoot808/yalla-shoot-new/6a47ce1e/NeoSansArabic.woff&#39;) format(&#39;woff&#39;)}
+
+            
+        /* Add your custom styles for the iframe container */
+        #player-container {
+            position: relative;
+            overflow: hidden;
+            padding-top: 56.25%; /* 16:9 aspect ratio (change based on your player's aspect ratio) */
+        }
+
+        #player-iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            border: 0;
+        }
+    </style>
+  
+  
+    <style>
+    #player-container {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      color: #fff;
+      overflow: hidden;
+    }
+    #iframe-iframe, #jwPlayer {
+      height: 100vh !important;
+      padding: 0;
+      margin: 0;
+    }
+    body {
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+    #container {
+      position: absolute;
+      text-align: center;
+    }
+    video {
+      outline: 0;
+    }
+    #text {
+      position: fixed;
+      border: 0;
+      left: 0;
+      width: 100%;
+      color: #fff;
+      bottom: 50px;
+      text-align: center;
+      font-family: tahoma;
+      font-size: 20px;
+      z-index: 9999;
+    }
+  </style>
+
+    
 </head>
 <body>
 
 <div class="plyr__video-embed" id="player">
-    <iframe width="100%" height="500px"  allowfullscreen allow="autoplay"></iframe>
+    <iframe id="player-iframe" width="100%" height="500px"  allowfullscreen allow="autoplay"></iframe>
 </div>
 
 <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
