--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-tt: " https://www.youtube.com/embed/RKDz2iBQiIg ",
+oktest: " https://ok.ru/videoembed/351615524467 ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
