--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-oktest: " https://ok.ru/videoembed/7915694333492?nochat=1&autoplay=1 ",
+inaus: " https://cdn.crichdplays.ru/embed2.php?id=spch64 ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
