--- a/adsense.html
+++ b/adsense.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url= https://www.yosin-tv.xyz/2024/06/ind-pak.html ">
+<meta http-equiv="refresh" content="0; url= https://www.reducemyweight.net/lose-10kg-in-a-month/ ">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://www.yosin-tv.xyz/2024/06/ind-pak.html  `;
+    const newUrl = ` https://www.reducemyweight.net/lose-10kg-in-a-month/  `;
     window.location.replace(newUrl);
 </script>
 </body>
