--- a/adsense.html
+++ b/adsense.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url= https://www.getemoji.online/animals.html ">
+<meta http-equiv="refresh" content="0; url= https://www.yosintv.net/star-sports-to-broadcast-npl-t20-2024-globally/ ">
 <title>Redirecting...</title>
 </head>
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://www.getemoji.online/animals.html `;
+    const newUrl = ` https://www.yosintv.net/star-sports-to-broadcast-npl-t20-2024-globally/ `;
     window.location.replace(newUrl);
 </script>
 </body>
