--- a/adsense.html
+++ b/adsense.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url= https://www.yosintv.net/centuries-by-sanju-and-tilak-give-india-a-massive-victory/ ">
-<title>Redirecting...</title>
+<title> YoSinTV Redirection...</title>
 </head>
 <body>
 <script>
