--- a/adsense.html
+++ b/adsense.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://www.yosintv.net/tottenham-thrashes-man-city-4-0-in-a-premier-league-stunner/ `;
+    const newUrl = `https://tinyurl.com/22eyajvv `;
     window.location.replace(newUrl);
 </script>
 </body>
@@ -16,5 +16,6 @@
 
 
 <!-- yosintv.org
+https://tinyurl.com/22eyajvv - getemoji.online
 https://tinyurl.com/yosintvorg
 -->
