--- a/adsense.html
+++ b/adsense.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://www.yosintv.net/india-defeats-australia-by-295-runs-in-first-test/ `;
+    const newUrl = ` https://tinyurl.com/22eyajvv `;
     window.location.replace(newUrl);
 </script>
 </body>
