--- a/adsense.html
+++ b/adsense.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://tinyurl.com/22eyajvv `;
+    const newUrl = `https://www.yosintv.net/hong-kongs-babar-hayat-joins-karnali-yaks-for-npl/ `;
     window.location.replace(newUrl);
 </script>
 </body>
