--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-inaus: " https://cdn.crichdplays.ru/embed2.php?id=spch64 ",
+star1hd: " https://yosintv2.github.io/bkp/rips.html?m=3 ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
