--- a/cric.html
+++ b/cric.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newurl = `https://37.hls-player.net/player.html?src=${customId}`;
+    const newurl = `https://01.getemoji.online/player.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
