--- a/foot.html
+++ b/foot.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newurl = `https://02.getemoji.online/player.html?src=${customId}`;
+    const newurl = `https://02.getemoji.online/playerr.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
