--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-star1hd: " https://yosintv2.github.io/bkp/rips.html?m=3 ",
+npl: " https://www.youtube.com/embed/k7bgdRrz6J8 ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
