--- a/foot.html
+++ b/foot.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newurl = `https://44.hls-player.net/player.html?src=${customId}`;
+    const newurl = `https://yosintv2.github.io/footlive/player.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
