--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-npl: " https://www.youtube.com/embed/k7bgdRrz6J8 ",
+npl: " https://www.youtube.com/embed/TNrdsEwU314 ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
