--- a/live.html
+++ b/live.html
@@ -16,7 +16,7 @@
         const channels = {
 
 
-npl: " https://www.youtube.com/embed/d4eLKnoEZno ",
+npl: " https://www.youtube.com/embed/207-dqPb4DM ",
 yt: " https://www.youtube.com/embed/YTLU9Bc_fNM ",  
 tnt1: "https://topembed.pw/channel/TNTSports1[UK]",
 tnt2: "https://topembed.pw/channel/TNTSports2[UK]",
