--- a/cric.html
+++ b/cric.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newurl = `https://yosintv2.github.io/criclivee/player.html?src=${customId}`;
+    const newurl = `https://www.yosintv.link/player.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
