--- a/ovo.html
+++ b/ovo.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://sportcastelite.net/events/stream${customID}`;
+    const originalURL = `https://sportelite.pro/events/stream${customID}`;
 
 	
     // Set the iframe source to the modified URL
