--- a/link.html
+++ b/link.html
@@ -13,12 +13,12 @@
     }
     .image-container {
         max-width: 100%;
-        height: 100%;
+        height: 100vh;
         text-align: center;
     }
     .image-container img {
         max-width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 </style>
 </head>
