--- a/link.html
+++ b/link.html
@@ -15,10 +15,12 @@
         max-width: 100%;
         height: 100vh;
         text-align: center;
+        overflow: hidden;
     }
     .image-container img {
         max-width: 100%;
-        height: 100vh;
+        height: 100%;
+        object-fit: contain; /* Ensures the image scales proportionally */
     }
 </style>
 </head>
@@ -28,11 +30,13 @@
             <img src="https://i.imgur.com/upM41qP.png" alt="Responsive Image">
         </a>
     </div>
+    <!-- BEGIN: Powered by Supercounters.com -->
+    <center>
+        <script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
+        <script type="text/javascript">sc_online_i(1688097,"ffffff","ffffff");</script>
+        <br>
+        <noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+    </center>
+    <!-- END: Powered by Supercounters.com -->
 </body>
 </html>
-
-
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1688097,"ffffff","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
