--- a/link.html
+++ b/link.html
@@ -23,10 +23,18 @@
         object-fit: contain; /* Ensures the image scales proportionally */
     }
 </style>
+<script>
+    function openWithDynamicUrl(targetUrl) {
+        const baseUrl = "https://example.com?url=";
+        const encodedUrl = encodeURIComponent(targetUrl);
+        const fullUrl = baseUrl + encodedUrl;
+        window.open(fullUrl, "_blank");
+    }
+</script>
 </head>
 <body>
     <div class="image-container">
-        <a href="https://whacairdake.com/4/7309451">
+        <a href="javascript:void(0);" onclick="openWithDynamicUrl('https://desired-destination.com')">
             <img src="https://i.imgur.com/upM41qP.png" alt="Responsive Image">
         </a>
     </div>
