--- a/cric.html
+++ b/cric.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const customId = urlParams.get('id');
+    const customId = urlParams.get('url');
     const newurl = `https://www.yosintv.link/clive.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
