--- a/cric.html
+++ b/cric.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://www.yosintv.link/clive.html?src=${customId}`;
+    const newurl = `https://02.getemoji.online/cric.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
