--- a/letv.html
+++ b/letv.html
@@ -14,7 +14,6 @@
     <title>YoSinTV MID Player</title>
     <style>
                      /*Font Library https://fonts.google.com/ */
-   @font-face{font-family:&#39;Neo Sans Arabic&#39;;font-style:normal;font-weight:normal;font-display:swap;src:local(&#39;Neo Sans Arabic&#39;),url(&#39;https://cdn.statically.io/gh/yallashoot808/yalla-shoot-new/6a47ce1e/NeoSansArabic.woff&#39;) format(&#39;woff&#39;)}
 
             
         /* Add your custom styles for the iframe container */
@@ -86,13 +85,12 @@
 
 <script>
     // Get the custom ID from the URL parameter
+   //  https://yosintv3.github.io/player/player6.html#https://al.rezhibo.com/livestream/hls/ballbar_${customID}/index.m3u8
     const urlParams = new URLSearchParams(window.location.search);
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://yosintv2.github.io/bkp/plyrr.html?url=https://play1nm.hnyongshun.cn/live/ballbar_${customID}.m3u8 
-`;
-
+    const originalURL = ` https://yosintv3.github.io/player/player6.html#https://al.rezhibo.com/livestream/hls/ballbar_${customID}/index.m3u8 `;
     // Set the iframe source to the modified URL
     document.getElementById('player-iframe').src = originalURL;
 </script>
