--- a/live.html
+++ b/live.html
@@ -43,26 +43,26 @@ z-index: 9999;
 const channels = {
 
     // prog.txt
-    hd1: "https://v3.sportsonline.ps/channels/hd/hd1.php",
-    hd2: "https://v3.sportsonline.ps/channels/hd/hd2.php",
-    hd3: "https://v3.sportsonline.ps/channels/hd/hd3.php",
-    hd4: "https://v3.sportsonline.ps/channels/hd/hd4.php",
-    hd5: "https://v3.sportsonline.ps/channels/hd/hd5.php",
-    hd6: "https://v3.sportsonline.ps/channels/hd/hd6.php",
-    hd7: "https://v3.sportsonline.ps/channels/hd/hd7.php",
-    hd8: "https://v3.sportsonline.ps/channels/hd/hd8.php",
-    hd9: "https://v3.sportsonline.ps/channels/hd/hd9.php",
-    hd10: "https://v3.sportsonline.ps/channels/hd/hd10.php",
-    hd11: "https://v3.sportsonline.ps/channels/hd/hd11.php",
+    hd1: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd1.php",
+    hd2: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd2.php",
+    hd3: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd3.php",
+    hd4: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd4.php",
+    hd5: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd5.php",
+    hd6: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd6.php",
+    hd7: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd7.php",
+    hd8: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd8.php",
+    hd9: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd9.php",
+    hd10: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd10.php",
+    hd11: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/hd/hd11.php",
 
     
     // prog.txt
-    bra1: "https://v3.sportsonline.ps/channels/bra/br1.php",
-    bra2: "https://v3.sportsonline.ps/channels/bra/br2.php",
-    bra3: "https://v3.sportsonline.ps/channels/bra/br3.php",
-    bra4: "https://v3.sportsonline.ps/channels/bra/br4.php",
-    bra5: "https://v3.sportsonline.ps/channels/bra/br5.php",
-    bra6: "https://v3.sportsonline.ps/channels/bra/br6.php",
+    bra1: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br1.php",
+    bra2: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br2.php",
+    bra3: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br3.php",
+    bra4: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br4.php",
+    bra5: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br5.php",
+    bra6: "https://yosintv.github.io/yosintv/jwplayers.html?src=https://v3.sportsonline.ps/channels/bra/br6.php",
     
 
 yt: "https://www.youtube.com/embed/YTLU9Bc_fNM",
