--- a/live.html
+++ b/live.html
@@ -37,6 +37,6 @@ z-index: 9999;
 <body>
     
 <iframe id="player" loading="lazy" allowfullscreen></iframe>
-
+<script src='https://cdn.jsdelivr.net/gh/yosintv/yosintv/live.js'/>
 </body>
 </html>
