--- a/flv.html
+++ b/flv.html
@@ -88,7 +88,7 @@
 <script>
     // Get the custom ID from the URL parameter
     const urlParams = new URLSearchParams(window.location.search);
-    const customID = urlParams.get('yosintv');
+    const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
     const originalURL = `  https://yosintv3.github.io/player/flv.html?url=https://pull.dangaoka.com/live/stream-${customID}.flv`;
