--- a/ovo.html
+++ b/ovo.html
@@ -83,7 +83,8 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://sportelite.pro/events/stream${customID}`;
+    const originalURL = `https://yosintv.github.io/yosintv/jwplayers.html?src=https://techcabal.net/clip/s${customID}.html`;
+	
 
 	
     // Set the iframe source to the modified URL
