--- a/elixx.html
+++ b/elixx.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://yosintv.github.io/yosintv/jwplayers.html?src=https://elixx.one/aw/${customID}.html`;
+    const originalURL = `https://yosintv.github.io/yosintv/jwplayers.html?src=https://elixx.one/aw/${customID}.php`;
 	
 
 	
