--- a/midst.html
+++ b/midst.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://yosintv2.github.io/ads/foot.html?url=https://yosintv.github.io/yosintv/mid.html?yosintv=${customId}`;
+    const newurl = `https://yosintv2.github.io/ads/foot.html?url=https://yosintv.github.io/yosintv/midd.html?yosintv=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
