--- a/promote.html
+++ b/promote.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = ` https://tinyurl.com/2774qe6s `;
+    const newUrl = ` https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiJh_SYnvyLAxXQqVYBHR5zLQs4ChAWegQIGBAB&url=https%3A%2F%2Fwww.hls-player.net%2F&usg=AOvVaw3LowXManqlQvAC6XFRIP7Q&opi=89978449 `;
     window.location.replace(newUrl);
 </script>
 </body>
