--- a/flv.html
+++ b/flv.html
@@ -1,13 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
         
-                
-        <!-- Thaa thyo malai, Code Copy garna ta sure aunchas vanera, Fuck You Machikne Randiko Chora, Kati chorchas-->
-        <!--If i find these code copied by someone, I will DMCA on that website-->
-        <!-- Code by YoSinTV, yosin-tv.net -->
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://www.yosin-tv.net/favicon.ico' rel='icon' type='image/x-icon'/>
@@ -91,10 +85,8 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `  https://yosintv3.github.io/player/flv.html?url=https://pull.dangaoka.com/live/stream-${customID}.flv`;
+    const originalURL = `https://www.yosintv.net/player3.html?url=https://pull.dangaoka.com/live/stream-${customID}.m3u8`;
 
-
-  
 
     // Set the iframe source to the modified URL
     document.getElementById('player-iframe').src = originalURL;
