--- a/kmg.html
+++ b/kmg.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://www.yosin-tv.net/favicon.ico' rel='icon' type='image/x-icon'/>
-    <title>YoSinTV FLV Player</title>
+    <title>YoSinTV KMG Player</title>
 
 	
     <style>      
