--- a/flv.html
+++ b/flv.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://yosintv2.github.io/bkp/plyrr.html?url=https://pull.dangaoka.com/live/stream-${customID}.m3u8`;
+    const originalURL = `https://www.yosintv.net/flv.html?url=https://pull.dangaoka.com/live/stream-${customID}.m3u8`;
 
 
     // Set the iframe source to the modified URL
