--- a/flv.html
+++ b/flv.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = `https://www.yosintv.net/dmca.html?url=https://pull.dangaoka.com/live/stream-${customID}.m3u8`;
+    const originalURL = `https://yosintv3.github.io/finalbackup/index.html?src=https://yosintv2.github.io/ads/plyrr.html?url=https://883f0cd13cae4b9414b1c6ed244aad5f.livehwc3.cn/pull.dangaoka.com/live/stream-${customID}.m3u8`;
 
 
     // Set the iframe source to the modified URL
