--- a/ak.html
+++ b/ak.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = ` https://yosintv2.github.io/bkp/plyrr.html?url=https://href.li/?https://live.inplyr.com/room/${customID}.m3u8 `;
+    const originalURL = ` https://yosintv2.github.io/bkp/plyrr.html?url=https://live.inplyr.com/room/${customID}.m3u8 `;
 
 
 	
