--- a/cric.html
+++ b/cric.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://yosintv3.github.io/05/cric.html/?src=${customId}`;
+    const newurl = `https://yosintv3.github.io/05/cric.html?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
