--- a/sx.html
+++ b/sx.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = ` https://yosintv.github.io/yosintv/jwplayers.html?src=https://sansat.link/ch${customID}/index.m3u8 `;
+    const originalURL = ` https://yosintv.github.io/yosintv/jwplayers.html?src=https://sansat.link/ch${customID} `;
     // Set the iframe source to the modified URL
     document.getElementById('player-iframe').src = originalURL;
 </script>
