--- a/encodee.html
+++ b/encodee.html
@@ -4,12 +4,8 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encode YoSinTV Player</title>
-    <style>
- /*Font Library https://fonts.google.com/ */
-   @font-face{font-family:&#39;Neo Sans Arabic&#39;;font-style:normal;font-weight:normal;font-display:swap;src:local(&#39;Neo Sans Arabic&#39;),url(&#39;https://cdn.statically.io/gh/yallashoot808/yalla-shoot-new/6a47ce1e/NeoSansArabic.woff&#39;) format(&#39;woff&#39;)}
-
-            
+    <title>Encode Player</title>
+    <style>       
         /* Add your custom styles for the iframe container */
         #player-container {
             position: relative;
