--- a/encodee.html
+++ b/encodee.html
@@ -24,13 +24,12 @@
         }
     </style>
   
-  <!--
     <style>
     #player-container {
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
+      height: 100vj;
       background: #000;
       color: #fff;
       overflow: hidden;
@@ -65,7 +64,6 @@
       z-index: 9999;
     }
   </style>
-  -->
 
           
 </head>
