--- a/encodee.html
+++ b/encodee.html
@@ -29,7 +29,7 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100vj;
+      height: 100vh;
       background: #000;
       color: #fff;
       overflow: hidden;
