--- a/soco.html
+++ b/soco.html
@@ -83,7 +83,7 @@
     const customID = urlParams.get('m');
 
     // Replace (custome_ID) in the original URL with the custom ID
-    const originalURL = ` https://cr7tv.github.io/player/player3.html?url=https://pull.niues.live/live/stream-${customID}_lhd.m3u8 `;
+    const originalURL = `https://yosintv.github.io/player/player3.html?url=https://pull.niues.live/live/stream-${customID}_lhd.m3u8 `;
 
 
 	
