--- a/foot.html
+++ b/foot.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://www.yosintvlive.com/ft?src=${customId}`;
+    const newurl = `https://ww.yosintvlive.com/ft?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
