--- a/midd.html
+++ b/midd.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://yosintv2.github.io/ads/foot.html?url=https://abclive.pages.dev/ak?m=${customId}`;
+    const newurl = `https://yosintv2.github.io/ads/foot.html?url=https://ytvlive.pages.dev/ak?m=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
