--- a/mid.html
+++ b/mid.html
@@ -9,7 +9,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newUrl = `https://ir.hls-player.net/player.html?src=https://yosintv2.github.io/tv/ads20.html?newurl=https://yosintv2.github.io/tv/mid.html?yosintv=${customId}`;
+    const newurl = `https://yosintv2.github.io/ads/foot.html?m=${customId}`;
     window.location.replace(newUrl);
 </script>
 </body>
