--- a/mid.html
+++ b/mid.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('id');
-    const newurl = `https://yosintv2.github.io/ads/foot.html?m=${customId}`;
+    const newurl = `https://yosintv2.github.io/ads/foot.html?url=${customId}`;
     window.location.replace(newUrl);
 </script>
 </body>
