--- a/mid.html
+++ b/mid.html
@@ -7,9 +7,9 @@
 <body>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const customId = urlParams.get('id');
+    const customId = urlParams.get('url');
     const newurl = `https://yosintv2.github.io/ads/foot.html?url=${customId}`;
-    window.location.replace(newUrl);
+    window.location.replace(newurl);
 </script>
 </body>
 </html>
