--- a/cric.html
+++ b/cric.html
@@ -8,7 +8,7 @@
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const customId = urlParams.get('url');
-    const newurl = `https://tv1.hls-player.net/ct?src=${customId}`;
+    const newurl = `https://ads1-yosintv.pages.dev/ct?src=${customId}`;
     window.location.replace(newurl);
 </script>
 </body>
